--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,14 @@ services:
     build: .
     ports:
       - "8080:8080"
+    environment:
+      - DBUSER=si5_sacc
+      - DBHOST=database
+      - DBNAME=td_1
+      - DBPW=dev_password
+      - DBPORT=5432
+    depends_on:
+      - database
 
   database:
     image: postgres:14
